File-backed implementation of delete in UrlRepositoryFileImpl.